# nc4fortran

./: .gitignore  .pre-commit-config.yaml  API.md  CITATION  CITATION.cff  CITATION.txt  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  LICENSE  README.md  ci.cmake  codemeta.json  ford.md  fpm.toml  meson.build  options.cmake  simple_xy_wr.f90
.archive/: netcdf.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  ci_cmake.yml  ci_fpm.yml  ci_linux.yml  ci_linux_meson.yml  ci_mac.yml  ci_meson.yml  ci_windows.yml  intel-oneapi.yml  oneapi-linux.yml  oneapi-linux.yml.bak
Examples/: CMakeLists.txt  Readme.md  example1.f90  example2.f90  fortran_interface.f90
cmake/: Config.cmake.in  FindHDF5.cmake  FindNetCDF.cmake  FindnetCDF.cmake  compilers.cmake  config.cmake.in  hdf5.cmake  install.cmake  libraries.cmake  libraries.json  nc4fortran.cmake  nc4fortranConfig.cmake.in  netcdf-c.cmake  netcdf.cmake  options.cmake  patch_netcdf_fortran.cmake  pkgconf.cmake  zlib.cmake
cmake/Modules/: FindHDF5.cmake  FindNetCDF.cmake
example/: CMakeLists.txt  Readme.md  fortran_interface.f90
meson/: meson.build
scripts/: CMakeLists.txt
src/: CMakeLists.txt  attributes.f90  interface.f90  meson.build  netcdf4_interface.f90  pathlib.in.f90  read.f90  read_scalar.f90  reader.f90  reader.in.f90  reader.inc  reader_template.f90  reader_template.in.f90  utils.f90  write.f90  write_scalar.f90  writer.f90  writer.in.f90  writer.inc  writer_template.f90  writer_template.in.f90  writer_template_i32.in.f90  writer_template_i64.in.f90  writer_template_r32.in.f90  writer_template_r64.in.f90
src/tests/: CMakeLists.txt  meson.build  test_array.f90  test_attr.f90  test_attributes.f90  test_deflate.f90  test_destructor.f90  test_error.f90  test_errors.f90  test_exist.f90  test_io.f90  test_minimal.f90  test_scalar.f90  test_shape.f90  test_string.f90  test_version.f90
test/: CMakeLists.txt  meson.build  test_array.f90  test_attributes.f90  test_deflate_props.f90  test_deflate_read.f90  test_deflate_write.f90  test_destructor.f90  test_error.f90  test_exist.f90  test_fill.f90  test_minimal.f90  test_scalar.f90  test_shape.f90  test_string.f90  test_version.f90
tests/: CMakeLists.txt  test_array.f90  test_scalar.f90  test_shape.f90
